syntax = "proto3";

package raw;

message RawMsg {
    uint32 type = 1;
    bytes payload = 2;
}
